MMCPA-1264: Checkout sign in theming issue on tablet.
Update the theme for chekout sign in page.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/cart/_checkout-layout.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/cart/_checkout-layout.scss
@@ -280,6 +280,9 @@
 
     @include breakpoint($tablet) {
       font-size: 0.875rem;
+    }
+
+    @include breakpoint($desktop) {
       margin-bottom: 1rem;
     }
   }
